[REFACTOR] Refactored tests for DoctorProfile REST API controller (High Level Networking)